Smaller changes and material experiments

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Main.Main
+EditorStartupMap=/Game/Maps/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -47,6 +48,21 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.RayTracing=False
+r.ReflectionCaptureResolution=128
+r.SkinCache.CompileShaders=True
+r.Lumen.HardwareRayTracing=False
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=False
+r.Lumen.TraceMeshSDFs=1
+r.AntiAliasingMethod=4
+r.TemporalAA.Upsampling=True
+r.DefaultFeature.LensFlare=False
+r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=True
+r.MSAACount=4
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -73,4 +89,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/WmfMediaFactory.WmfMediaSettings]
+HardwareAcceleratedVideoDecoding=False
 
